--- a/main.css
+++ b/main.css
@@ -82,6 +82,12 @@ a {
 }
 body {
   background-color: #e0e2db;
+  width: 100%;
+  height: 100%;
+}
+html {
+  width: 100%;
+  height: 100%;
 }
 
 /*nav
@@ -489,6 +495,8 @@ nav {
   background-size: cover;
   background-repeat: no-repeat;
   padding: 20px 0 80px 0;
+  justify-content: center;
+  align-content: center;
 }
 
 .services-container {
@@ -577,11 +585,11 @@ nav {
 }
 
 .service-item:hover .front-text {
-  transform: translateY(-200px);
-  -webkit-transform: translateY(-200px);
-  -moz-transform: translateY(-200px);
-  -ms-transform: translateY(-200px);
-  -o-transform: translateY(-200px);
+  transform: translateY(-390px);
+  -webkit-transform: translateY(-390px);
+  -moz-transform: translateY(-390px);
+  -ms-transform: translateY(-390px);
+  -o-transform: translateY(-390px);
 }
 
 .service-item:hover .back-text {
@@ -610,7 +618,7 @@ nav {
 /*projects */
 
 #projects .title-text {
-  color: #191716;
+  color: var(--clr-primary-1);
 }
 
 #projects {
@@ -734,6 +742,8 @@ nav {
   text-align: center;
   font-size: 2rem;
   color: var(--clr-primary-7);
+  width: 65%;
+  margin: 0 auto;
 }
 .form {
   display: flex;
